@@ -6,19 +6,12 @@
 function panels_views_plugins() {
   $plugins = array(
     'row' => array(
-      'parent' => array(
-        // this isn't really a display but is necessary so the file can
-        // be included.
-        'no ui' => TRUE,
-        'handler' => 'views_plugin_row',
-        'parent' => '',
-      ),
       'panels_fields' => array(
         'title' => t('Panel fields'),
         'help' => t('Displays the fields in a panel rather than using a template.'),
         'handler' => 'panels_views_plugin_row_fields',
         'path' => drupal_get_path('module', 'panels') . '/plugins/views',
-        'theme' => 'views_view_fields',
+        'theme' => NULL,
         'uses fields' => TRUE,
         'uses options' => TRUE,
         'type' => 'normal',
